update with latest data

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:33.245182Z",
-     "start_time": "2020-04-08T08:19:31.951087Z"
+     "end_time": "2020-04-27T07:16:28.653825Z",
+     "start_time": "2020-04-27T07:16:24.145368Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:38.146926Z",
-     "start_time": "2020-04-08T08:19:38.142966Z"
+     "end_time": "2020-04-27T07:16:28.663798Z",
+     "start_time": "2020-04-27T07:16:28.656816Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:38.838420Z",
-     "start_time": "2020-04-08T08:19:38.835458Z"
+     "end_time": "2020-04-27T07:16:28.673776Z",
+     "start_time": "2020-04-27T07:16:28.667791Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:39.704000Z",
-     "start_time": "2020-04-08T08:19:39.311155Z"
+     "end_time": "2020-04-27T07:16:28.915127Z",
+     "start_time": "2020-04-27T07:16:28.678758Z"
     }
    },
    "outputs": [],
@@ -113,8 +113,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:40.609814Z",
-     "start_time": "2020-04-08T08:19:40.598876Z"
+     "end_time": "2020-04-27T07:16:28.970975Z",
+     "start_time": "2020-04-27T07:16:28.918117Z"
     }
    },
    "outputs": [],
@@ -128,8 +128,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:41.722708Z",
-     "start_time": "2020-04-08T08:19:41.719716Z"
+     "end_time": "2020-04-27T07:16:28.977962Z",
+     "start_time": "2020-04-27T07:16:28.972970Z"
     }
    },
    "outputs": [],
@@ -142,8 +142,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:41.942007Z",
-     "start_time": "2020-04-08T08:19:41.932031Z"
+     "end_time": "2020-04-27T07:16:29.003892Z",
+     "start_time": "2020-04-27T07:16:28.980952Z"
     }
    },
    "outputs": [],
@@ -170,8 +170,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:43.044125Z",
-     "start_time": "2020-04-08T08:19:43.039174Z"
+     "end_time": "2020-04-27T07:16:29.013860Z",
+     "start_time": "2020-04-27T07:16:29.007876Z"
     }
    },
    "outputs": [],
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:24:00.781844Z",
-     "start_time": "2020-04-08T08:24:00.766888Z"
+     "end_time": "2020-04-27T07:16:29.742481Z",
+     "start_time": "2020-04-27T07:16:29.729514Z"
     }
    },
    "outputs": [],
@@ -240,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:24:01.988101Z",
-     "start_time": "2020-04-08T08:24:01.830553Z"
+     "end_time": "2020-04-27T07:16:31.170989Z",
+     "start_time": "2020-04-27T07:16:30.722182Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e653ccaa5e5c447eb541662e12cbf2de",
+       "model_id": "c10f50b5b7714195a6e37da931fe9858",
        "version_major": 2,
        "version_minor": 0
       },
@@ -288,8 +288,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:51.050699Z",
-     "start_time": "2020-04-08T08:19:51.046811Z"
+     "end_time": "2020-04-27T07:16:33.609542Z",
+     "start_time": "2020-04-27T07:16:33.602581Z"
     }
    },
    "outputs": [],
@@ -311,8 +311,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:51.402945Z",
-     "start_time": "2020-04-08T08:19:51.394966Z"
+     "end_time": "2020-04-27T07:16:33.869683Z",
+     "start_time": "2020-04-27T07:16:33.856719Z"
     }
    },
    "outputs": [],
@@ -364,18 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:23:04.081209Z",
-     "start_time": "2020-04-08T08:23:03.815768Z"
+     "end_time": "2020-04-27T07:16:35.271751Z",
+     "start_time": "2020-04-27T07:16:34.739170Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a45ffe152d524480b079cbe6b8ec9d41",
+       "model_id": "c3aa771c6e3949aea30cbfdf2d4d56df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,8 +422,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:19:54.255939Z",
-     "start_time": "2020-04-08T08:19:54.244973Z"
+     "end_time": "2020-04-27T07:16:36.523160Z",
+     "start_time": "2020-04-27T07:16:36.499226Z"
     }
    },
    "outputs": [],
@@ -433,11 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:22:22.646214Z",
-     "start_time": "2020-04-08T08:22:22.639270Z"
+     "end_time": "2020-04-27T07:16:36.753705Z",
+     "start_time": "2020-04-27T07:16:36.746726Z"
     }
    },
    "outputs": [],
@@ -457,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:22:23.016300Z",
-     "start_time": "2020-04-08T08:22:23.007324Z"
+     "end_time": "2020-04-27T07:16:37.012187Z",
+     "start_time": "2020-04-27T07:16:37.006174Z"
     }
    },
    "outputs": [],
@@ -500,18 +500,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:22:24.856095Z",
-     "start_time": "2020-04-08T08:22:24.548855Z"
+     "end_time": "2020-04-27T07:16:38.410808Z",
+     "start_time": "2020-04-27T07:16:37.826115Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "966a7ca930b3418e84f9b0dc02e2b1a2",
+       "model_id": "0e62bd9fd1c0458a88012d5cee0eee79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -557,18 +557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:22:27.841243Z",
-     "start_time": "2020-04-08T08:22:27.375040Z"
+     "end_time": "2020-04-27T07:16:41.275994Z",
+     "start_time": "2020-04-27T07:16:39.793731Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "032930fb40df4033882de444eda8786c",
+       "model_id": "e4297dd4413a4fbc9c32d14a18e421a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,11 +599,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:20:47.026063Z",
-     "start_time": "2020-04-08T08:20:47.019083Z"
+     "end_time": "2020-04-27T07:42:31.028040Z",
+     "start_time": "2020-04-27T07:42:31.014076Z"
     }
    },
    "outputs": [],
@@ -613,11 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:21:40.079171Z",
-     "start_time": "2020-04-08T08:21:40.072153Z"
+     "end_time": "2020-04-27T07:42:31.262412Z",
+     "start_time": "2020-04-27T07:42:31.253450Z"
     }
    },
    "outputs": [],
@@ -641,18 +641,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:21:41.000615Z",
-     "start_time": "2020-04-08T08:21:40.509672Z"
+     "end_time": "2020-04-27T07:42:32.834209Z",
+     "start_time": "2020-04-27T07:42:31.674310Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6fc32fdbf36408995b53b668eda55f1",
+       "model_id": "dd12467241a94da2b54f7f3dee94ccd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -672,6 +672,13 @@
     "                                    style = {'description_width': 'initial'}, layout=Layout(width='60%', height='150px'),\n",
     "                                    value=['Italy', 'Belgium', 'Spain', 'US']));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -710,7 +717,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
