--- a/covid19_logistic.ipynb
+++ b/covid19_logistic.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:36.615556Z",
-     "start_time": "2020-04-08T08:18:36.422859Z"
+     "end_time": "2020-04-27T07:44:45.250902Z",
+     "start_time": "2020-04-27T07:44:44.897845Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "046e932dbef54eb9be12f1cbbb72ddf7",
+       "model_id": "de8fd91cbf6a4b6bb8f499c4b918ddc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,8 +71,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:29.242089Z",
-     "start_time": "2020-04-08T08:18:28.436666Z"
+     "end_time": "2020-04-27T07:42:50.948434Z",
+     "start_time": "2020-04-27T07:42:49.220027Z"
     }
    },
    "outputs": [],
@@ -114,8 +114,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:29.318333Z",
-     "start_time": "2020-04-08T08:18:29.311310Z"
+     "end_time": "2020-04-27T07:42:50.956380Z",
+     "start_time": "2020-04-27T07:42:50.950396Z"
     }
    },
    "outputs": [],
@@ -137,8 +137,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:29.611545Z",
-     "start_time": "2020-04-08T08:18:29.606564Z"
+     "end_time": "2020-04-27T07:42:50.964361Z",
+     "start_time": "2020-04-27T07:42:50.959371Z"
     }
    },
    "outputs": [],
@@ -151,8 +151,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:30.169526Z",
-     "start_time": "2020-04-08T08:18:29.918244Z"
+     "end_time": "2020-04-27T07:42:51.234678Z",
+     "start_time": "2020-04-27T07:42:50.967352Z"
     }
    },
    "outputs": [],
@@ -172,8 +172,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:30.823416Z",
-     "start_time": "2020-04-08T08:18:30.807490Z"
+     "end_time": "2020-04-27T07:42:51.633789Z",
+     "start_time": "2020-04-27T07:42:51.615838Z"
     }
    },
    "outputs": [],
@@ -187,8 +187,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:31.092132Z",
-     "start_time": "2020-04-08T08:18:31.086148Z"
+     "end_time": "2020-04-27T07:42:51.979957Z",
+     "start_time": "2020-04-27T07:42:51.975969Z"
     }
    },
    "outputs": [],
@@ -201,8 +201,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:31.293590Z",
-     "start_time": "2020-04-08T08:18:31.283616Z"
+     "end_time": "2020-04-27T07:42:52.314064Z",
+     "start_time": "2020-04-27T07:42:52.293120Z"
     }
    },
    "outputs": [],
@@ -229,8 +229,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:32.299816Z",
-     "start_time": "2020-04-08T08:18:32.294857Z"
+     "end_time": "2020-04-27T07:42:52.918447Z",
+     "start_time": "2020-04-27T07:42:52.912465Z"
     }
    },
    "outputs": [],
@@ -241,11 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:18:32.516879Z",
-     "start_time": "2020-04-08T08:18:32.501918Z"
+     "end_time": "2020-04-27T07:44:24.904035Z",
+     "start_time": "2020-04-27T07:44:24.891069Z"
     }
    },
    "outputs": [],
@@ -265,7 +265,7 @@
     "    plt.scatter(x, y, label=\"Real data\", color=\"red\")\n",
     "    \n",
     "#     fit data\n",
-    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,2000000])\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
     "    a = fit[0][0]\n",
@@ -282,6 +282,13 @@
     "    # Mdel data\n",
     "    plt.plot(x+pred_x, [logistic_model(i,fit[0][0],fit[0][1],fit[0][2]) for i in x+pred_x], label=\"Logistic model\");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
