--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.653825Z",
-     "start_time": "2020-04-27T07:16:24.145368Z"
+     "end_time": "2020-05-04T07:10:30.480585Z",
+     "start_time": "2020-05-04T07:10:26.219356Z"
     }
    },
    "outputs": [],
@@ -31,7 +31,7 @@
     "from ipywidgets import fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
     "\n",
     "from pandas.tseries.offsets import Week\n",
-    "%matplotlib inline"
+    "#%matplotlib inline"
    ]
   },
   {
@@ -55,8 +55,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.663798Z",
-     "start_time": "2020-04-27T07:16:28.656816Z"
+     "end_time": "2020-05-04T07:11:03.399621Z",
+     "start_time": "2020-05-04T07:11:03.392635Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.673776Z",
-     "start_time": "2020-04-27T07:16:28.667791Z"
+     "end_time": "2020-05-04T07:11:03.684648Z",
+     "start_time": "2020-05-04T07:11:03.677908Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.915127Z",
-     "start_time": "2020-04-27T07:16:28.678758Z"
+     "end_time": "2020-05-04T07:11:04.306434Z",
+     "start_time": "2020-05-04T07:11:03.943669Z"
     }
    },
    "outputs": [],
@@ -113,8 +113,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.970975Z",
-     "start_time": "2020-04-27T07:16:28.918117Z"
+     "end_time": "2020-05-04T07:11:06.866040Z",
+     "start_time": "2020-05-04T07:11:06.823058Z"
     }
    },
    "outputs": [],
@@ -128,8 +128,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:28.977962Z",
-     "start_time": "2020-04-27T07:16:28.972970Z"
+     "end_time": "2020-05-04T07:11:07.084464Z",
+     "start_time": "2020-05-04T07:11:07.079476Z"
     }
    },
    "outputs": [],
@@ -142,8 +142,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:29.003892Z",
-     "start_time": "2020-04-27T07:16:28.980952Z"
+     "end_time": "2020-05-04T07:11:07.248362Z",
+     "start_time": "2020-05-04T07:11:07.226420Z"
     }
    },
    "outputs": [],
@@ -170,8 +170,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:29.013860Z",
-     "start_time": "2020-04-27T07:16:29.007876Z"
+     "end_time": "2020-05-04T07:11:09.412889Z",
+     "start_time": "2020-05-04T07:11:09.407903Z"
     }
    },
    "outputs": [],
@@ -185,8 +185,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:29.742481Z",
-     "start_time": "2020-04-27T07:16:29.729514Z"
+     "end_time": "2020-05-04T07:11:09.871265Z",
+     "start_time": "2020-05-04T07:11:09.856305Z"
     }
    },
    "outputs": [],
@@ -243,20 +243,20 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:31.170989Z",
-     "start_time": "2020-04-27T07:16:30.722182Z"
+     "end_time": "2020-05-04T07:11:12.318906Z",
+     "start_time": "2020-05-04T07:11:11.747536Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c10f50b5b7714195a6e37da931fe9858",
+       "model_id": "eec25d04b93b478abcbd68569946f2d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='country', index=84, options=('Afghanistan', 'Albania', 'Algeria', …"
+       "interactive(children=(Dropdown(description='country', index=85, options=('Afghanistan', 'Albania', 'Algeria', …"
       ]
      },
      "metadata": {},
@@ -288,8 +288,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:33.609542Z",
-     "start_time": "2020-04-27T07:16:33.602581Z"
+     "end_time": "2020-05-04T07:11:18.774918Z",
+     "start_time": "2020-05-04T07:11:18.765938Z"
     }
    },
    "outputs": [],
@@ -311,8 +311,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:33.869683Z",
-     "start_time": "2020-04-27T07:16:33.856719Z"
+     "end_time": "2020-05-04T07:11:19.070496Z",
+     "start_time": "2020-05-04T07:11:19.062512Z"
     }
    },
    "outputs": [],
@@ -364,23 +364,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:35.271751Z",
-     "start_time": "2020-04-27T07:16:34.739170Z"
+     "end_time": "2020-05-04T07:11:44.398608Z",
+     "start_time": "2020-05-04T07:11:43.777260Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3aa771c6e3949aea30cbfdf2d4d56df",
+       "model_id": "2e7cef0b34be4c68b1f26cce653f85dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=500000.0, continuous_update=False, description='Affected population', …"
+       "interactive(children=(FloatSlider(value=2000000.0, continuous_update=False, description='Affected population',…"
       ]
      },
      "metadata": {},
@@ -391,7 +391,7 @@
     "interact(SIRmodel_logbeta2, \n",
     "         timesteps=fixed(np.arange(0., 1000, 1)), country = Dropdown(options=list(Confirmed.columns), value='US'), \n",
     "         measured_cases = fixed(Confirmed),\n",
-    "         S_0=FloatSlider(value=500000, min=Confirmed.max().mean(), max=5*Confirmed.max().max(), step=1000,\n",
+    "         S_0=FloatSlider(value=2000000, min=Confirmed.max().mean(), max=5*Confirmed.max().max(), step=1000,\n",
     "                           continuous_update=False, description='Affected population', style = {'description_width': 'initial'}, \n",
     "                           layout=Layout(width='50%', height='30px')), \n",
     "         I_0=fixed(1), R_0=fixed(0),\n",
@@ -419,11 +419,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:36.523160Z",
-     "start_time": "2020-04-27T07:16:36.499226Z"
+     "end_time": "2020-05-04T07:11:51.977127Z",
+     "start_time": "2020-05-04T07:11:51.955187Z"
     }
    },
    "outputs": [],
@@ -433,11 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:36.753705Z",
-     "start_time": "2020-04-27T07:16:36.746726Z"
+     "end_time": "2020-05-04T07:11:52.166637Z",
+     "start_time": "2020-05-04T07:11:52.161633Z"
     }
    },
    "outputs": [],
@@ -457,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:37.012187Z",
-     "start_time": "2020-04-27T07:16:37.006174Z"
+     "end_time": "2020-05-04T07:11:52.530612Z",
+     "start_time": "2020-05-04T07:11:52.521629Z"
     }
    },
    "outputs": [],
@@ -500,23 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:38.410808Z",
-     "start_time": "2020-04-27T07:16:37.826115Z"
+     "end_time": "2020-05-04T07:11:58.877879Z",
+     "start_time": "2020-05-04T07:11:58.301364Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e62bd9fd1c0458a88012d5cee0eee79",
+       "model_id": "390eef9b566446bca31fce776c12f180",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 84, 156, 171), layout=Layou…"
+       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 85, 157, 173), layout=Layou…"
       ]
      },
      "metadata": {},
@@ -557,23 +557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:16:41.275994Z",
-     "start_time": "2020-04-27T07:16:39.793731Z"
+     "end_time": "2020-05-04T07:12:29.443634Z",
+     "start_time": "2020-05-04T07:12:27.870687Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4297dd4413a4fbc9c32d14a18e421a7",
+       "model_id": "4dc88f6d3ca243e89e8096302db038e7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(16, 84…"
+       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(16, 85…"
       ]
      },
      "metadata": {},
@@ -599,11 +599,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:42:31.028040Z",
-     "start_time": "2020-04-27T07:42:31.014076Z"
+     "end_time": "2020-05-04T07:13:06.142820Z",
+     "start_time": "2020-05-04T07:13:06.126861Z"
     }
    },
    "outputs": [],
@@ -613,11 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:42:31.262412Z",
-     "start_time": "2020-04-27T07:42:31.253450Z"
+     "end_time": "2020-05-04T07:13:06.345796Z",
+     "start_time": "2020-05-04T07:13:06.336305Z"
     }
    },
    "outputs": [],
@@ -641,23 +641,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:42:32.834209Z",
-     "start_time": "2020-04-27T07:42:31.674310Z"
+     "end_time": "2020-05-04T07:13:08.236686Z",
+     "start_time": "2020-05-04T07:13:06.472457Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd12467241a94da2b54f7f3dee94ccd9",
+       "model_id": "6bad009e9f1e4dceb8cb5b62c9b50b60",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(84, 16…"
+       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(85, 16…"
       ]
      },
      "metadata": {},
@@ -704,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
